# reconpilot

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  k3s.yaml
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  alembic.ini  e2e_test.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/middleware/: audit.py  rate_limit.py
backend/app/api/v1/: auth.py  dashboard.py  findings.py  projects.py  reports.py  router.py  scans.py  scope.py  users.py  websocket.py
backend/app/core/: database.py  events.py  logging.py  redis.py  security.py  types.py
backend/app/models/: __init__.py  audit_log.py  finding.py  project.py  report.py  scan.py  scope.py  user.py
backend/app/orchestrator/: auto_discover.py  chain_logic.py  engine.py  profiles.py
backend/app/reporting/: generator.py
backend/app/reporting/templates/: executive_summary.html  technical_report.html
backend/app/schemas/: finding.py  project.py  report.py  scan.py  user.py
backend/app/services/: finding_service.py  scope_validator.py
backend/app/tools/: base.py  registry.py  result.py
backend/app/tools/exploitation/: sqlmap.py
backend/app/tools/recon/: amass.py  httpx.py  subfinder.py
backend/app/tools/scanning/: ffuf.py  gobuster.py  nikto.py  nmap.py  nuclei.py
backend/app/tools/web_analysis/: sslyze.py  testssl.py  whatweb.py
backend/tests/: conftest.py  test_auth.py  test_auto_discover.py  test_dashboard.py  test_findings.py  test_health_status.py  test_logging.py  test_orchestrator.py  test_projects.py  test_scans.py  test_scope.py  test_tool_execution.py  test_tools.py
backend/workers/: celery_app.py
backend/workers/tasks/: maintenance.py  report_tasks.py  scan_tasks.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/__tests__/: auth.test.ts  formatters.test.ts  notificationStore.test.ts  scanStore.test.ts
frontend/src/api/: client.ts  findings.ts  projects.ts  reports.ts  scans.ts  websocket.ts
frontend/src/components/common/: Button.tsx  ConnectionStatus.tsx  DataTable.tsx  ErrorBoundary.tsx  Modal.tsx  ProtectedRoute.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/components/findings/: FindingCard.tsx  FindingDetail.tsx  FindingFilters.tsx  SeverityChart.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/network/: TopologyView.tsx
frontend/src/components/reports/: ReportBuilder.tsx  ReportPreview.tsx
frontend/src/components/scans/: ProfileSelector.tsx  ScanConfigurator.tsx  ScanProgress.tsx  ScanTimeline.tsx  ScanWizard.tsx
frontend/src/hooks/: useAuth.ts  useFindings.ts  useScans.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  FindingDetail.tsx  FindingExplorer.tsx  Findings.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  Reports.tsx  ScanView.tsx  Scans.tsx  Settings.tsx  Team.tsx  TeamManagement.tsx
frontend/src/store/: authStore.ts  notificationStore.ts  scanStore.ts
frontend/src/types/: finding.ts  project.ts  scan.ts  user.ts
frontend/src/utils/: constants.ts  formatters.ts
nginx/: nginx-docker.conf  nginx.conf
scripts/: backup-db.sh  backup.sh  docker-entrypoint.sh  seed_db.py
